Fixed link decoration on small articles on blog index

--- a/css/_page.scss
+++ b/css/_page.scss
@@ -6,6 +6,7 @@ body > header {
 		background-color: $accent;
 		border-width: 0;
 		color: #fff;
+		display: inline-block;
 		font-weight: 700;
 		font-style: italic;
 		font-size: rem(22);
